# video-streaming-sample-react-fastapi

./: README.md
fastapi_video_streaming/: pyproject.toml  python_poetry_memo.txt
fastapi_video_streaming/fastapi_video_streaming/: main.py
fastapi_video_streaming/fastapi_video_streaming/templates/: index.html
fastapi_video_streaming/tests/: test_fastapi_video_streaming.py
streaming-frontend/: package-lock.json  package.json
streaming-frontend/src/: App.js  VideoPlayer.js
