[tool.poetry]
name = "fastapi_video_streaming"
version = "0.1.0"
description = ""
authors = ["masahirot <13981959+pentam19@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.16.0"
Jinja2 = "^3.0.3"
fastapi = "^0.70.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
